header spacing issues fix #60

--- a/app/assets/stylesheets/_app.sass
+++ b/app/assets/stylesheets/_app.sass
@@ -233,7 +233,7 @@
   clear: none !important
 
 .ui.fixed.menu, .ui[class*="top fixed"].menu
-  height: 60px
+  height: 56px
 
 .ui.cards > .ui.card
   .image
